# ric-implementation

./: .gitignore  CONFIG_EXAMPLES.md  DEPLOYMENT_FIXES.md  README.md  deploy_ric_interactive.py  flexric.sh  install_and_run_oran_sc_ric.sh  setup_flexric.sh  simple_deployment.sh
old/: demo_deployment.sh  deploy_flexric_oai_e2.sh  install_and_run_oran_sc_ric.sh  integrar_oai_flexric.sh  setup_core.sh  setup_flexric.sh  test_deployment_script.py
openran-deployment/: README.md  clean.sh  deploy.sh  restart.sh  status.sh  stop.sh  validate.sh
openran-deployment/configs/: example_configs.sh
openran-deployment/docs/: API_REFERENCE.md  README.md
openran-deployment/scripts/: deploy_flexric_oai.sh  deploy_oran_sc.sh  generate_gnb_config.sh  generate_ric_config.sh  generate_ue_config.sh  run_tests.sh  start_monitoring.sh  test_config_fixes.sh  test_deployment_fixes.sh
xapp-template/: .gitignore  CMakeLists.txt
xapp-template/config/: thresholds.json  xapp_config.json
xapp-template/docs/: API.md
xapp-template/include/: analytics.h  database.h  smart_monitor_xapp.h  utils.h
xapp-template/scripts/: build.sh  deploy.sh
xapp-template/src/: analytics.c  smart_monitor_xapp.c  utils.c
xapp-template/tests/: test_analytics.c  test_database.c
xapp/test-1/: CMakeLists.txt  Dockerfile  README.md
xapp/test-1/src/: main.cpp
xapp/test-2/: INTEGRATION.md  README.md
xapp/test-2/docs/: DEPLOYMENT.md
xapp/test-2/include/: smart_monitor_xapp.h
xapp/test-2/scripts/: build.sh  run_tests.sh
xapp/test-2/src/: database.c
